<resources>
    <string name="app_name">帳務紀錄簿</string>

    <string name="main_title">帳本</string>
    <string name="addData_title">新增資料</string>

    <!--Extra 傳輸資料使用-->
    <string name="extra_year">DataYear</string>
    <string name="extra_month">DataMonth</string>
    <string name="extra_day">DataDay</string>
    <string name="extra_tag">DataTag</string>
    <string name="extra_money">DataMoney</string>
    <string name="extra_type">DataType</string>
    <string name="extra_text">DataText</string>

    <!--main-->
    <string name="button_add_data">新增資料</string>
    <string name="item_title_detail">帳務詳細</string>
    <string name="item_title_settings">設定</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="balance">結餘</string>
    <string name="empty_not_saved">無法儲存，因為date為空</string>

    <!--addIoActivity-->
    <string name="app_name_addIOActivity">新增支出/收入</string>
    <string name="title_date">日期：</string>
    <string name="title_tag">分類：</string>
    <string name="title_money">金額：</string>
    <string name="title_text">描述：</string>
    <string name="radio_income">收入</string>
    <string name="radio_outcome">支出</string>
    <string name="hint_date">2021/06/04</string>
    <string name="hint_tag">食品, 交通..</string>
    <string name="hint_money">149</string>
    <string name="hint_text">便當, 公車費, 油錢, 生活用品等..</string>
    <string name="button_add">新增資料</string>

    <!--moneyLayout-->
    <string name="app_name_moneyLayout">帳務紀錄</string>
</resources>