<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIoActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="14"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tag"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerTag"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/spinnerTag" />

    <EditText
        android:id="@+id/spinnerTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="14"
        android:hint="@string/hint_tag"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_money"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMoney"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/editTextMoney" />

    <EditText
        android:id="@+id/editTextMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="14"
        android:hint="@string/hint_money"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/spinnerTag"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTag" />

    <RadioGroup
        android:id="@+id/moneyTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checkedButton="@+id/radioIncome"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/editTextMoney"
        app:layout_constraintTop_toBottomOf="@+id/editTextMoney">

        <RadioButton
            android:id="@+id/radioIncome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/radio_income" />

        <RadioButton
            android:id="@+id/radioOutcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_outcome" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="14"
        android:hint="@string/hint_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/moneyTypeGroup"
        app:layout_constraintTop_toBottomOf="@+id/moneyTypeGroup" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/editTextText" />

    <Button
        android:id="@+id/addData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="24dp"
        android:onClick="addNewData"
        android:text="@string/button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />


</androidx.constraintlayout.widget.ConstraintLayout>